--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
 
           <div class="row mx-0">
 
-                <h2 class="header">Combined Game Stats</h2>
+                <h2 class="">Combined Game Stats</h2>
 
                   <ngx-charts-advanced-pie-chart
                     [scheme]="colorScheme"
@@ -52,7 +52,7 @@
 
           <div class="row mx-0" style="margin-bottom: 5rem;">
 
-                <h2 class="header">Historical Game Stats</h2>
+                <h2 class="">Historical Game Stats</h2>
 
                   <ngx-charts-area-chart-stacked
                     [scheme]="colorScheme"
