--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @import '~@swimlane/ngx-datatable/themes/dark.scss';
 @import '~@swimlane/ngx-datatable/assets/icons.css';
 
-html, body { height: 100%; }
+ 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .btn:hover {
@@ -16,20 +16,27 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .btn:active {
     transform: scale(0.95);
 } 
+.header{
+    position: fixed !important;
+    width: 100%;
+    top:0;
+    z-index:1000;
+}
+.mainfooter{
+    position: fixed !important;
+    width: 100%;
+    bottom: 0;
+    z-index:1000;
+}
 
-body {
-
-    background-color: #2b1f07;
-    margin: 0;
-    padding: 0;
-     min-height: 100%; /* real browsers */ /* needed for container min-height */
-  }
   div.main_content {
-
-    background-color: #2b1f07;
+      margin-top: 60px;
+      margin-bottom: 200px;
     position: relative; /* needed for footer positioning*/
     height: auto !important; /* real browsers */
+    background-color: #2b1f07;
     min-height: 100vh; /* real browsers */
+    background-color: #2b1f07;
   }
   
   .card-header {
