--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -66,7 +66,9 @@
     background: #223b04;//#786546-223b04-182b02
 }
 .custom_skirmesh{
-    background-color: #2b1f07;
+    // background-color: #2b1f07;
+  background-color: rgba(0,0,0,0.7);
+    min-height: 70vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
