--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -10,7 +10,7 @@
         </button> -->
 
        
-        <div class="navbar justify-content-end" id="navdrop">
+        <div class="navbar " id="navdrop">
             <img [routerLink]="['/non-secure/home']" class="hc_custom img-fluid" src="../../../assets/images/logo.png"
             alt="user" />
 
@@ -34,50 +34,50 @@
 
             <!-- NON SECURE LINKS BELOW -->
             <ul class="navbar justify-content-end" *ngIf="!isSecure">
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="nav_home" (click)="route('/non-secure/home')">Home </a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="nav_featureList" [routerLink]="['/non-secure/how-to-use']"> Player Intel
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="nav_fieldInfo" [routerLink]="['/non-secure/field-info']">Field Intel</a>
-                </li>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="nav_home" (click)="route('/non-secure/home')">Home </div>
+                </div>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="nav_featureList" [routerLink]="['/non-secure/how-to-use']"> Player Intel
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="nav_fieldInfo" [routerLink]="['/non-secure/field-info']">Field Intel</div>
+                </div>
                 <!-- <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="nav_register" [routerLink]="['/auth/sign-up']">Enlist</a>
+                    <div class="btn btn-outline-secondary nav-link" id="nav_register" [routerLink]="['/auth/sign-up']">Enlist</div>
                 </li> -->
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/non-secure/live-games']">LIVE Battles</a>
-                </li>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/non-secure/live-games']">LIVE Battles</div>
+                </div>
                 <!-- <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame"
-                        (click)="route('/non-secure/leader-board')">Leaderboard</a>
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame"
+                        (click)="route('/non-secure/leader-board')">Leaderboard</div>
                 </li> -->
             </ul>
             <!-- SECURE LINKS BELOW -->
             <ul class="navbar justify-content-end" *ngIf="isSecure">
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_dashboard" [routerLink]="['/secure/dashboard']">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_profile" [routerLink]="['/secure/profile']">Profile</a>
-                </li>
-                <li *ngIf="isField" class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/startGame']">Manage
-                        Games</a>
-                </li>
-                <li *ngIf="isField" class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Configure Games</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/live-games']">LIVE Games</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame" (click)="route('/secure/past-games')">Past Games</a>
-                </li>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_dashboard" [routerLink]="['/secure/dashboard']">Dashboard</div>
+                </div>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_profile" [routerLink]="['/secure/profile']">Profile</div>
+                </div>
+                <div *ngIf="isField" class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/startGame']">Manage
+                        Games</div>
+                </div>
+                <div *ngIf="isField" class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Configure Games</div>
+                </div>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/live-games']">LIVE Games</div>
+                </div>
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame" (click)="route('/secure/past-games')">Past Games</div>
+                </div>
                 <!-- <li class="nav-item">
-                    <a class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame"
+                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame"
                         (click)="route('/non-secure/leader-board')">Leaderboard</a>
                 </li> -->
 
@@ -106,7 +106,7 @@
 
 </div>
 
-<div *ngIf="appSvc.isMobile" style="background-color: #4E4B2C; "> 
+<div *ngIf="appSvc.isMobile" style="background-color: #2b1f07; "> 
     <div id='wrapper' *ngIf="appSvc.isSideNavOpen">
        <div id="sidebar-wrapper"> 
            <ul class="sidebar-nav"> <i class="fa fa-times cust_floater2" (click)="appSvc.isSideNavOpen = !appSvc.isSideNavOpen" aria-hidden="true"></i> 
