--- a/src/app/non-secure/home/home.component.scss
+++ b/src/app/non-secure/home/home.component.scss
@@ -1,129 +1,28 @@
-
-.center-cust{
-    justify-content: center;
-    text-align: center;
+// https://www.shutterstock.com/image-photo/two-special-forces-soldiers-men-holding-402474256
+.home_container{
+  @media screen and (min-width: 768px) {
+    min-height: 70vh;  
+    margin-left: 30vh;  
   }
-
-img.carousel-image {
-
-    object-fit: cover;
-    max-height: 400px;
-    width: 100%;
-
+  @media screen and (max-width: 768px) {
+    min-height: 100vh;  
+    margin-left: 5vh;  
+    margin-right: 5vh;  
+  } 
+  background-size: cover; 
+  background: linear-gradient(110deg, transparent 200px, rgba(0, 0, 0, 0.7) 100px); 
 }
+.leaderboard{
+  @media screen and (min-width: 768px) {
+    margin-left: 40vh;
+    margin-right: 10vh;
+    align-items: right;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70vh;
+    margin-right: 10vh;
+    align-items: right;
+  }
 
-slide div p, slide div h3{
-    color: #000000;
-    background-color:#ccba87;
-    border-radius: 0.2rem;
+  // transform: skew(28deg, 0deg);  
 }
-
-
-.censored {
-    color: #222;
-    background: black;
-}
-
-div {
-    display: inline-block;
-  }
-  
-  .bigger {
-    margin: 0;
-    font-size: 60px;
-    font-weight: 800;
-    padding: 20px;
-    text-transform: uppercase;
-    color: #202020;
-    display: inline-block;
-    position: relative;
-  }
-  
-  .text {
-    max-width: 600px;
-    width: 100%;
-    line-height: 24px;
-    text-align: left;
-    color: #404040;
-    padding: 20px;
-  }
-  .text.txt-center {
-    text-align: center;
-  }
-  .text a {
-    color: #0fe4d2;
-  }
-  
-  .has-animation {
-    position: relative;
-  }
-  .has-animation p, .has-animation img {
-    opacity: 0;
-  }
-  .has-animation.animate-in p, .has-animation.animate-in img {
-    animation: textHidden 0.1s 1.1s forwards;
-  }
-  .has-animation.animate-in:before, .has-animation.animate-in:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    z-index: 10;
-  }
-  .has-animation.animate-in:before {
-    background-color: teal;
-  }
-  .has-animation.animate-in:after {
-    background-color: yellowgreen;
-    animation-delay: .5s;
-  }
-  .has-animation.animation-ltr.animate-in:before {
-    animation: revealLTR 1.8s ease;
-  }
-  .has-animation.animation-ltr.animate-in:after {
-    animation: revealLTR 1s .6s ease;
-  }
-  .has-animation.animation-rtl.animate-in:before {
-    animation: revealRTL 1.8s ease;
-  }
-  .has-animation.animation-rtl.animate-in:after {
-    animation: revealRTL 1s .6s ease;
-  }
-  
-  @keyframes revealRTL {
-    0% {
-      width: 0;
-      right: 0;
-    }
-    65% {
-      width: 100%;
-      right: 0;
-    }
-    100% {
-      width: 0;
-      right: 100%;
-    }
-  }
-  @keyframes revealLTR {
-    0% {
-      width: 0;
-      left: 0;
-    }
-    65% {
-      width: 100%;
-      left: 0;
-    }
-    100% {
-      width: 0;
-      left: 100%;
-    }
-  }
-  @keyframes textHidden {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
