--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -2,19 +2,22 @@
 .navbar{
   margin: 0;
   padding: 0;
+  position: fixed;  
 }
 
 .nav{
   // background:linear-gradient(59deg, #786546, #142401)
-  display: block !important;
+  
   background: #92795D !important;
   align-items: right;
   .nav-item{
-    min-width: 20px;
+    display: inline-block !important;
+    min-width: 5vh;
+    max-width: 20vh;
     list-style-type:none;
     color:#A8B3BB;
     margin: 5px;
-    padding: 5px;
+    // padding: 5px;
   }
 }
 
