--- a/src/app/global/game-config/game-config.component.html
+++ b/src/app/global/game-config/game-config.component.html
@@ -39,7 +39,7 @@
 </table>
 </div>
 
-<div *ngIf="activeConfig" class="container">
+<div *ngIf="activeConfig" class="container p-4">
 
     <div class="d-grid col-6 mx-auto">
 
