--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!appSvc.isMobile" class="header nav">
 
-    <div class="container">
+    <div class="container-fluid">
 
         <!-- <div id="particles-js" onload="particlesJS(this.id)"> </div> -->
 
