--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,21 +26,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 100%;
     top:0;
     z-index:1000;
-    height: 10vh;
+    // height: 10vh;
 }
 .mainfooter{
-    position: fixed !important;
+    // position: fixed !important;
     width: 100%;
-    bottom: 0;
-    z-index:1000;
-    height: 25vh;
+    // bottom: 0;
+    // z-index:1000;
+    // height: 25vh;
 }
 
   div.main_content {
       background-image: url("./assets/images/soilderbg.jpeg");
       @media screen and (min-width: 768px) {
-        margin-top: 10vh;
-        margin-bottom: 25vh;
+        padding-top: 10vh;
+        padding-bottom: 25vh;
 
       }
     //   overflow: scroll;
