--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 @import '../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css';
 
 .mobileApp{
-    height: 16px;
-    position: fixed;
+    // height: 16px;
+    // position: fixed;
     top:0;
     background-color: #2b1f07;
 }
