--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -1,5 +1,5 @@
 <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
-<div class="cust_skirmesh container">
+<div class="cust_skirmesh">
   <div class="view-account">
     <section class="module">
       <div class="module-inner">
