--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,15 +40,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       background-image: url("./assets/images/soilderbg.jpeg");
       @media screen and (min-width: 768px) {
         padding-top: 10vh;
-        padding-bottom: 25vh;
-
+        padding-bottom: 15vh;
+        min-height: 80vh;
       }
     //   overflow: scroll;
     //   max-width: 100vh;
     position: relative; /* needed for footer positioning*/
     height: auto !important; /* real browsers */
     background-color: #2b1f07;
-    min-height: 70vh; /* real browsers */
+    min-height: 100vh;
   }
   
   .card-header {
