--- a/src/app/secure/weapons/weapons.component.html
+++ b/src/app/secure/weapons/weapons.component.html
@@ -1,181 +1,155 @@
-<div cdkDropListGroup class="container-fluid">
-    <div class="row">
-      <div class="col-sm-3 m-3" style="background-color: bisque">
-        <div class="example-container">
-          <h2 style="color: rgb(41, 41, 41)">Available Weapons</h2>
-          <label class="example-box cursor" (click)="showWeapons('main')"
-            >Main Weapon</label
-          >
-          <label class="example-box cursor" (click)="showWeapons('secondary')"
-            >Secondary Weapon</label
-          >
-          <label class="example-box cursor" (click)="showWeapons('explosives')"
-            >Explosives</label
-          >
-  
-          <div
-            *ngIf="showMainWeapon"
-            cdkDropList
-            [cdkDropListData]="mainWeapons"
-            cdkDropListSortingDisabled
-          >
-            <div
-              class="example-box m-1 align-middle"
-              *ngFor="let item of mainWeapons"
-              cdkDrag
-            >
+<div cdkDropListGroup class="container-fluid" style="height: 100vh;
+overflow: scroll;">
+  <div class="row">
+    <div class="col-sm-3 col-12" style="background-color: bisque">
+      <h2 style="color: rgb(41, 41, 41)">Available Weapons</h2>
+
+      <div class="row">
+        <label class="example-box cursor col-md-3 col-3" style="width: 100%" (click)="showWeapons('main')">Main
+          Weapon</label>
+        <label class="example-box cursor col-md-3 col-3" style="width: 100%"
+          (click)="showWeapons('secondary')">Secondary Weapon</label>
+        <label class="example-box cursor col-md-3 col-3" style="width: 100%"
+          (click)="showWeapons('explosives')">Explosives</label>
+        <label class="example-box cursor col-md-3 col-3" style="width: 100%"
+          (click)="showWeapons('tectical')">Tectical</label>
+        <div class="col-md-12 col-12">
+          <div *ngIf="showMainWeapon" cdkDropList [cdkDropListData]="mainWeapons" cdkDropListSortingDisabled
+            class="row">
+            <div class="example-box align-middle col-3 col-sm-4" *ngFor="let item of mainWeapons" cdkDrag>
+              <img height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+              <br />
               {{ item.name }}
-              <img
-                height="70px"
-                style="margin-left: 60%; background-color: white"
-                src="{{ item.imageUrl }}"
-              />
             </div>
           </div>
-  
-          <div
-            *ngIf="showSecondaryWeapon"
-            cdkDropList
-            [cdkDropListData]="secondaryWeapons"
-            cdkDropListSortingDisabled
-          >
-            <div
-              class="example-box m-1 align-middle"
-              *ngFor="let item of secondaryWeapons"
-              cdkDrag
-            >
+
+          <div *ngIf="showSecondaryWeapon" cdkDropList [cdkDropListData]="secondaryWeapons" cdkDropListSortingDisabled
+            class="row">
+            <div class="example-box col-3 col-sm-4 align-middle" *ngFor="let item of secondaryWeapons" cdkDrag>
+              <img class="ml-2" height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+              <br />
               {{ item.name }}
-              <img
-                height="70px"
-                style="margin-left: 60%; background-color: white"
-                src="{{ item.imageUrl }}"
-              />
             </div>
           </div>
-  
-          <div
-            *ngIf="showExplosive"
-            cdkDropList
-            [cdkDropListData]="explosive"
-            cdkDropListSortingDisabled
-          >
-            <div
-              class="example-box m-1 align-middle"
-              *ngFor="let item of explosive"
-              cdkDrag
-            >
+
+          <div *ngIf="showExplosive" cdkDropList [cdkDropListData]="explosive" cdkDropListSortingDisabled class="row">
+            <div class="example-box col-sm-4 col-3 align-middle" *ngFor="let item of explosive" cdkDrag>
+              <img height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+              <br />
               {{ item.name }}
-              <img
-                height="70px"
-                style="margin-left: 50%; background-color: white"
-                src="{{ item.imageUrl }}"
-              />
+            </div>
+          </div>
+
+          <div *ngIf="showTectical" cdkDropList [cdkDropListData]="tectical" cdkDropListSortingDisabled class="row">
+            <div class="example-box col-sm-4 col-3 align-middle" *ngFor="let item of tectical" cdkDrag>
+              <img height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+              <br />
+              {{ item.name }}
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-8 m-3">
-        <div class="row">
-          <h2 style="color: wheat">Available Loadout</h2>
-          &nbsp; &nbsp; &nbsp;
-          <button class="btn btn-primary" (click)="addLoadOut()">
-            Add Loadout
-          </button>
+    </div>
+    <div class="col-sm-2 col-3"
+      style="background-color: bisque; border: 2px; border-style: solid; border-color: black; text-align: center;">
+      <h6>Loadouts</h6>
+      <i class="fa fa-plus fa-2x" (click)="addLoadOut()"></i>
+      <div class="row">
+        <div *ngFor="let loadOut of loadOutList; let i = index" class="jumbotron p-0 m-0 mb-1 text-center col-12 col-sm-12">
+          <div class="row">
+            <div (click)="makeItPrimary(loadOut)" class="col-md-3 col-3 cursor">
+              <i *ngIf="!loadOut.primaryLoadout" class="fa fa-star-o pl-1"></i>
+              <i *ngIf="loadOut.primaryLoadout" class="fa fa-star pl-1"></i>
+            </div>
+            <div (click)="viewSelectedLayout(loadOut)" class="col-md-8 col-8 cursor">
+              {{ i+1 }}
+            </div>
+          </div>
         </div>
-        <div class="row">
-          <div
-            class="example-container col-sm-3"
-            *ngFor="let loadOut of loadOutList"
-          >
-            <div class="row">
-              <h2 style="color: wheat">Loadout {{ loadOut.id }}</h2>
-              &nbsp; &nbsp;
-              <button class="btn btn-danger" (click)="removeLoadOut(loadOut.id)">
-                Delete
-              </button>
+      </div>
+    </div>
+
+    <div class="col-sm-7 col-9" style="background-color: bisque; padding-bottom: 20vh;">
+      <div class="row">
+        <div class="col-sm-12" *ngFor="let loadOut of selectedLayout">
+          <h2 class="text-center">
+            <ng-template [ngIf]="loadOut.isEditName">
+              <input [(ngModel)]="loadOut.name" />  
+              <i class="fa fa-check" style="color: green;" (click)="loadOut.isEditName = !loadOut.isEditName"></i>
+            </ng-template>
+            <ng-template [ngIf]="!loadOut.isEditName"> 
+              {{loadOut.name}}  
+              <i class="fa fa-edit" style="color: blue;" (click)="loadOut.isEditName = !loadOut.isEditName"></i>
+            </ng-template>
+            <i class="fa fa-trash" style="color: red;" (click)="removeLoadOut(loadOut.id)"></i>
+          </h2>
+          <div class="row">
+            <div class="col-md-6 col-6 p-0">
+              <div cdkDropList [cdkDropListData]="loadOut.mainloadOut" class="example-list m-1 p-0 cursor"
+                (cdkDropListDropped)="drop($event, 1)">
+                <div class="col-12 m-1 p-1 cursor">
+                  Main Weapon
+                  <div class="example-box" *ngFor="let item of loadOut.mainloadOut" cdkDrag>
+                    {{ item.name }} &nbsp;
+
+                    <img height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+                    <i class="fa fa-trash fa-2x" style="color: red; cursor: pointer;"
+                      (click)="removeItem(item, loadOut.id, 1)"></i>
+
+                  </div>
+                </div>
+              </div>
             </div>
-  
-            <div
-              cdkDropList
-              [cdkDropListData]="loadOut.mainloadOut"
-              class="example-list"
-              (cdkDropListDropped)="drop($event, 1)"
-            >
-              <label
-                >Main Weapon
-                <div
-                  class="example-box"
-                  *ngFor="let item of loadOut.mainloadOut"
-                  cdkDrag
-                >
-                  {{ item.name }} &nbsp; &nbsp;
-  
-                  <img
-                    height="70px"
-                    style="background-color: white"
-                    src="{{ item.imageUrl }}"
-                  />
-  
-                  <button
-                    class="btn btn-danger"
-                    (click)="removeItem(item, loadOut.id, 1)"
-                  >
-                    Delete
-                  </button>
-                </div></label
-              >
+            <div class="col-md-6 col-6 p-0">
+              <div cdkDropList [cdkDropListData]="loadOut.secondaryloadOut"
+                class="example-list  m-1 p-0 cursor" (cdkDropListDropped)="drop($event, 2)">
+                <div class="col-12  m-1 p-1 cursor">
+                  Secondary Weapon
+                  <div class="example-box" *ngFor="let item of loadOut.secondaryloadOut" cdkDrag>
+                    {{ item.name }} &nbsp;
+
+                    <img height="70px" style="background-color: white" src="{{ item.imageUrl }}" />
+                    <i class="fa fa-trash fa-2x" style="color: red; cursor: pointer;"
+                      (click)="removeItem(item, loadOut.id, 2)"></i>
+
+
+                  </div>
+                </div>
+              </div>
             </div>
-  
-            <div
-              cdkDropList
-              [cdkDropListData]="loadOut.secondaryloadOut"
-              class="example-list"
-              (cdkDropListDropped)="drop($event, 2)"
-            >
-              <label
-                >Secondary Weapon
-                <div
-                  class="example-box"
-                  *ngFor="let item of loadOut.secondaryloadOut"
-                  cdkDrag
-                >
-                  {{ item.name }} &nbsp; &nbsp;
-                  <button
-                    class="btn btn-danger"
-                    (click)="removeItem(item, loadOut.id, 2)"
-                  >
-                    Delete
-                  </button>
-                </div></label
-              >
+            <div class="col-md-6 col-6 p-0">
+              <div cdkDropList [cdkDropListData]="loadOut.explosiveloadOut"
+                class="example-list  m-1 p-0 cursor" (cdkDropListDropped)="drop($event, 3)">
+                <div class="col-12  m-1 p-1 cursor">
+                  Explosive
+                  <div class="example-box" *ngFor="let item of loadOut.explosiveloadOut" cdkDrag>
+                    {{ item.name }} &nbsp;
+                    <img height="50px" style="background-color: white" src="{{ item.imageUrl }}" />
+                    <i class="fa fa-trash fa-2x" style="color: red; cursor: pointer;"
+                      (click)="removeItem(item, loadOut.id, 3)"></i>
+
+                  </div>
+                </div>
+              </div>
             </div>
-  
-            <div
-              cdkDropList
-              [cdkDropListData]="loadOut.explosiveloadOut"
-              class="example-list"
-              (cdkDropListDropped)="drop($event, 3)"
-            >
-              <label
-                >Explosive
-                <div
-                  class="example-box"
-                  *ngFor="let item of loadOut.explosiveloadOut"
-                  cdkDrag
-                >
-                  {{ item.name }} &nbsp; &nbsp;
-                  <button
-                    class="btn btn-danger"
-                    (click)="removeItem(item, loadOut.id, 3)"
-                  >
-                    Delete
-                  </button>
-                </div></label
-              >
+            <div class="col-md-6 col-6 p-0">
+              <div cdkDropList [cdkDropListData]="loadOut.tecticalloadOut" class="example-list  m-1 p-0 cursor"
+                (cdkDropListDropped)="drop($event, 4)">
+                <div class="col-12  m-1 p-1 cursor">
+                  Tectical
+                  <div class="example-box" *ngFor="let item of loadOut.tecticalloadOut" cdkDrag>
+                    {{ item.name }} &nbsp;
+                    <img height="50px" style="background-color: white" src="{{ item.imageUrl }}" />
+                    <i class="fa fa-trash fa-2x" style="color: red; cursor: pointer;"
+                      (click)="removeItem(item, loadOut.id, 4)"></i>
+
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
