--- a/src/app/secure/weapons/weapons.component.scss
+++ b/src/app/secure/weapons/weapons.component.scss
@@ -1,10 +1,5 @@
-.example-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
-}
+@import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
+
 
 .cursor {
   cursor: pointer !important;
