--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="home_container">
 
-  <div class='leaderboard'> 
-    <app-leaderboard></app-leaderboard> 
+  <div class='col'> 
+    <div class="leaderboard">
+      <app-leaderboard></app-leaderboard>  
+    </div>
+    <div class="">
+      hello
+      
+    </div>
   </div>
 </div>
 
