--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -62,6 +62,7 @@
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  bottom:5vh;
 }
 
 #wrapper #sidebar-wrapper {
