--- a/src/app/global/game-config/game-config.component.html
+++ b/src/app/global/game-config/game-config.component.html
@@ -23,6 +23,7 @@
         <td><button
                 class="btn btn-sm btn-default btn-danger"
                 (click)="onDeleteMode(config)"
+                [disabled]="!userSvc.isField"
                 align="center">Delete</button></td>
       </tr>
 
