--- a/src/app/non-secure/features-list/features-list.component.html
+++ b/src/app/non-secure/features-list/features-list.component.html
@@ -3,6 +3,32 @@
     <div class="row justify-content-center">
         <div class="col">
 
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.6</span> - 26 August 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Marshal access! Fields can give game admin access to marshals.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Update leaderboard styling. </li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Add team death total to scoreboard. </li>
+            </ul>
+
+        </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <div class="col">
+
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.5</span> - 26 August 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Events! Host and gather here!</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Leaderboard can sort by Field.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i> Bug fixes and other minor improvements </li>
+            </ul>
+
+        </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <div class="col">
+
             <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.4</span> - 3rd August 2021</h5>
             <ul class="list-unstyled mt-3">
                 <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i><strong>No more</strong> negative points (kind of)!</li>
