--- a/src/app/non-secure/game-history/game-history.component.html
+++ b/src/app/non-secure/game-history/game-history.component.html
@@ -1,5 +1,5 @@
 
-<div class="d-grid gap-2 col-6 mx-auto">
+<div class="d-grid gap-2 col-sm-4 mx-auto">
 
     <div *ngIf="selectedField"
           class="btn btn-secondary btn-block"
@@ -52,7 +52,7 @@
 
 <div *ngIf="selectedField" class="row">
 
-    <div class="d-grid gap-2 col-6 mx-auto">
+    <div class="d-grid gap-2 col-3 mx-auto">
 
       <button *ngIf="selectedGame?.id && fieldProfile?.id && fieldProfile?.id == selectedMode?.fieldProfileID"
            class="btn btn-danger btn-block"
