--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="home_container">
 
   <div class='col'> 
+    <div>
+      <h2>Skirmesh MILSIM connected</h2>
+    </div>
     <div class="leaderboard">
       <app-leaderboard></app-leaderboard>  
     </div>
-    <div class="">
-      hello
-      
-    </div>
+     
   </div>
 </div>
 
