--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -32,7 +32,7 @@
             </ul> -->
 
             <!-- NON SECURE LINKS BELOW -->
-            <ul class="" *ngIf="!isSecure">
+            <div class="" *ngIf="!isSecure">
                 <img [routerLink]="['/non-secure/home']" class="hc_custom img-fluid" src="../../../assets/images/logo.png"
                 alt="user" />
                 <div class="nav-item">
@@ -48,20 +48,33 @@
                 <!-- <li class="nav-item">
                     <div class="btn btn-outline-secondary nav-link" id="nav_register" [routerLink]="['/auth/sign-up']">Enlist</div>
                 </li> -->
-                <div class="nav-item">
-                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/non-secure/live-games']">LIVE Battles</div>
+                <div class="dropdown nav-item">
+                    <div class="btn btn-outline-secondary nav-link dropbtn" id="secure_nav_mygame" [routerLink]="['/non-secure/live-games']">Battles</div>
+                    <div class="dropdown-content">
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/non-secure/live-games']"
+                        type="submit">Live Battles</div>
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/non-secure/past-games']"
+                        type="submit">Past Battles</div>
+                        
+                      </div>
                 </div> 
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" [routerLink]="['/non-secure/events']" >Events</div>
+                </div>
                 <div class="nav-item">
                     <div class="btn btn-outline-danger  nav-link" [routerLink]="['/auth/login']"
                         type="submit">Barracks</div>
+                        
                 </div>
                 <!-- <li class="nav-item">
                     <div class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame"
                         (click)="route('/non-secure/leader-board')">Leaderboard</div>
                 </li> -->
-            </ul>
+            </div>
             <!-- SECURE LINKS BELOW -->
-            <ul class="" *ngIf="isSecure">
+            <div class="" *ngIf="isSecure">
                 <img [routerLink]="['/non-secure/home']" class="hc_custom img-fluid" src="../../../assets/images/logo.png"
                 alt="user" />
                 <div class="nav-item">
@@ -70,18 +83,38 @@
                 <div class="nav-item">
                     <div class="btn btn-outline-secondary nav-link" id="secure_nav_profile" [routerLink]="['/secure/profile']">Profile</div>
                 </div>
-                <div *ngIf="isField" class="nav-item">
-                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/startGame']">Manage
-                        Games</div>
+
+                <div *ngIf="!isField" class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" [routerLink]="['/secure/configureWeapons']" >Loadout</div>
                 </div>
-                <div *ngIf="isField" class="nav-item">
-                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Configure Games</div>
+                <div *ngIf="isField" class="dropdown nav-item">
+                    <div class="btn btn-outline-secondary nav-link dropbtn" id="secure_nav_mygame" [routerLink]="['/secure/startGame']">Manage Missions</div>
+                    <div class="dropdown-content">
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/secure/startGame']"
+                        type="submit">Execute Missions</div>
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/secure/manageGame']"
+                        type="submit">Configure Missions</div> 
+                      </div>
+                </div> 
+                <div class="dropdown nav-item">
+                    <div class="btn btn-outline-secondary nav-link dropbtn" id="secure_nav_mygame" [routerLink]="['/non-secure/live-games']">Battles</div>
+                    <div class="dropdown-content">
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/non-secure/live-games']"
+                        type="submit">Live Battles</div>
+                        <hr>
+                        <div class="btn btn-outline-secondary  nav-link" [routerLink]="['/non-secure/past-games']"
+                        type="submit">Past Battles</div>
+                        
+                      </div>
+                </div> 
+                <div class="nav-item">
+                    <div class="btn btn-outline-secondary nav-link" [routerLink]="['/non-secure/events']" >Events</div>
                 </div>
                 <div class="nav-item">
-                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_mygame" [routerLink]="['/secure/live-games']">LIVE Games</div>
-                </div>
-                <div class="nav-item">
-                    <div class="btn btn-outline-secondary nav-link" id="secure_nav_pastgame" (click)="route('/secure/past-games')">Past Games</div>
+                    <div class="btn btn-outline-secondary nav-link" [routerLink]="['/non-secure/leader-board']" >Leaderboard</div>
                 </div>
                 <div class="nav-item ">
                     <div class="btn btn-outline-danger  nav-link" (click)="signOut()" >Sign Out</div>
@@ -91,19 +124,11 @@
                         (click)="route('/non-secure/leader-board')">Leaderboard</a>
                 </li> -->
 
-            </ul>
+            </div>
 
 
             <!-- SIGN-IN / SIGN-OUT -->
-            <ul class="navbar justify-content-end" *ngIf="!isSecure">
-               
-
-            </ul>
-
-            <ul class="navbar justify-content-end" *ngIf="isSecure">
-                
-
-            </ul>
+             
             <!-- </ul> -->
         </div>
 
@@ -129,13 +154,18 @@
                     <a (click)="appSvc.isSideNavOpen = !appSvc.isSideNavOpen" [routerLink]="['/secure/dashboard']">Dashboard</a>
                     <hr>
                 </li>
+
+                <li class="nav-item">
+                    <a (click)="appSvc.isSideNavOpen = !appSvc.isSideNavOpen" [routerLink]="['/non-secure/events']" >Events</a>
+                    <hr>
+                </li>
                 <li *ngIf="isSecure" class="sidebar-brand">
                     <a>
                         Player Section
                     </a> 
                 </li>
                 <li *ngIf="isSecure">
-                    <a (click)="appSvc.isSideNavOpen = !appSvc.isSideNavOpen" [routerLink]="['/secure/past-games']">Past Games</a>
+                    <a (click)="appSvc.isSideNavOpen = !appSvc.isSideNavOpen" [routerLink]="['/non-secure/past-games']">Past Games</a>
                     <hr>
                 </li>
                 <li *ngIf="isSecure">
