--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
 
-    <div class="col my-2">
+    <div class="col-lg-6 my-2">
 
       <div class="card">
 
@@ -33,22 +33,26 @@
 
     </div>
 
-    <div class="col my-2 container">
+    <div class="col-4 my-2 container">
 
           <div class="row mx-0">
 
                 <h2 class="">Combined Game Stats</h2>
 
-                  <ngx-charts-advanced-pie-chart
-                    [scheme]="colorScheme"
-                    [results]="pieData"
-                    (select)="onSelect($event)"
-                    (activate)="onActivate($event)"
-                    (deactivate)="onDeactivate($event)">
-                  </ngx-charts-advanced-pie-chart>
+        <div class="row mx-0">
 
-          </div>
+              <h2 class="">Lifetime Points</h2>
+              <div class="col-12">
+                <ngx-charts-advanced-pie-chart
+                  [scheme]="colorScheme"
+                  [results]="pieData"
+                  (select)="onSelect($event)"
+                  (activate)="onActivate($event)"
+                  (deactivate)="onDeactivate($event)">
+                </ngx-charts-advanced-pie-chart>
+              </div>
 
+        </div>
 
           <div class="row mx-0" style="margin-bottom: 5rem;">
 
@@ -66,7 +70,7 @@
                     (select)="onSelect($event)">
                   </ngx-charts-area-chart-stacked>
 
-          </div>
+        </div>
 
     </div>
 
